descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.


----------------------------------------------------------------------
--- 2014-XX-XX  Release 7.26.XX                                    ---
----------------------------------------------------------------------

* added brlman -S option to specify man page section  - Cliff Yapp
* modified rtg3 to avoid outputting excessive LOS - Nick Gerstner
* extended burst and rtg3 to output 5 digit ID numbers - Nick Gerstner
* improved draw command manual page documenation - Cliff Yapp
* added lc -m option to report multi-material/los regions - Cliff Yapp
* added new 'icv' image conversion tool w/ pix, bw, dpix, png, ppm
	- Mohit Daga, Cliff Yapp, Sean Morrison, Erik Greenwald
* ported 'burst' tool (batch mode only) to Windows - Cliff Yapp
* removed mged pl command, use plot command instead - Sean Morrison
* improved datum wireframes (yellow) and fixed arrowheads - Cliff Yapp
* added initial manual page for 'burst' ray dispatch tool - Cliff Yapp
* added draw -S for simplied wireframes, no subtractions - Cliff Yapp
* added draw -L# to draw bounding boxes for large objects - Cliff Yapp
* minor rtwizard graphical user interface reorganization - Cliff Yapp
* ported 'brlman' manual page viewer with GUI to Windows - Cliff Yapp
* added gdiff -h help command-line option - Cliff Yapp
* added facetize -m marching cubes option - Erik Greenwald
* removed -I interactive option from rt/rtedge/remrt - Sean Morrison
* improved pix-bw intensity averaging to closest integer - Cliff Yapp
* removed pix-bw3 & bw3-pix tools, see pix-bw & bw-pix - Cliff Yapp
* fixed pix-ppm to write out all image data - Sean Morrision
* added new algorithm to bot_decimate (via -f option) - Jon Engbert
* fixed benchmark bug running from paths with spaces - Sean Morrison
* removed support for RLE v1 and v2 ('orle') image format - Cliff Yapp